--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <div class="grid__item">
       <div class="card">
         <img class="card__img"
-          src="https://png.pngtree.com/png-clipart/20211024/original/pngtree-coming-soon-banner-design-with-speaker-png-image_6869715.png"
+          src="https://static.vecteezy.com/system/resources/previews/011/066/416/non_2x/portfolio-button-portfolio-speech-bubble-portfolio-colorful-web-banner-illustration-vector.jpg"
           alt="Portfolio" />
         <div class="card__content">
           <h1 class="card__header">TASK 02</h1>
-          <p class="card__text">Coming Soon</p>
-          <a href="#" class="card__btn">Explore <span>&rarr;</span></a>
+          <p class="card__text">A Portfolio With the help of HTML CSS & JS</p>
+          <a href="/task-2" class="card__btn">Explore <span>&rarr;</span></a>
         </div>
       </div>
     </div>
