--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
     <div class="grid__item">
       <div class="card">
         <img class="card__img"
-          src="https://png.pngtree.com/png-clipart/20211024/original/pngtree-coming-soon-banner-design-with-speaker-png-image_6869715.png"
+          src="https://e0.pxfuel.com/wallpapers/465/705/desktop-wallpaper-the-problem-planet-thermometer-temperature-climate-climate-change.jpg"
           alt="Temp. Converter" />
         <div class="card__content">
           <h1 class="card__header">TASK 03</h1>
-          <p class="card__text">Coming Soon</p>
-          <a href="#" class="card__btn">Explore <span>&rarr;</span></a>
+          <p class="card__text">A Temperature Converter With the help of HTML CSS & JS</p>
+          <a href="/task-3" class="card__btn">Explore <span>&rarr;</span></a>
         </div>
       </div>
     </div>
